# fltt-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  test-program.mr
mw2025-p/: maszyna-wirtualna  maszyna-wirtualna-cln
src/: compiler.cpp  compiler.hpp  main.cpp
src/ASM/: asm_table.cpp  asm_table.hpp  instruction.hpp  reg_utils.cpp  reg_utils.hpp
src/AST/: ASTNode.cpp  ASTNode.hpp  syntax_tree.cpp  syntax_tree.hpp
src/TAC/: tac.hpp  tac_info.cpp  tac_info.hpp  tac_table.cpp  tac_table.hpp
src/input/: arg_parser.cpp  arg_parser.hpp  file_handler.cpp  file_handler.hpp
src/integrated-vm/: colors.hpp  instructions.hpp  mw-cln.cpp  mw-cln.hpp  run_vm.cpp  run_vm.hpp  vm-lexer.lex  vm-parser.y
src/lexer/: lexer.cpp  lexer.lex
src/parser/: parser.cpp  parser.hpp  parser.y  parser_utils.hpp
src/procedure/: procedure.cpp  procedure.hpp  procedure_tree.hpp
src/symbol/: argument.cpp  argument.hpp  array.cpp  array.hpp  symbol.cpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  variable.cpp  variable.hpp
src/tac/: tac_table.cpp  tac_table.hpp  triple.cpp  triple.hpp
src/utils/: const.hpp  logging.hpp  panic.hpp
tests/: README.md  config.json  gijoop-tests.json  run-tests.py  test-set-1.json  test-set-2.json  tests.json
tests/gijoop-tests/: gijoop-test-add-1.imp  gijoop-test-add-2.imp  gijoop-test-add-3.imp  gijoop-test-add-4.imp  gijoop-test-add-5.imp  gijoop-test-add-6.imp  gijoop-test-add-7.imp  gijoop-test-array-1.imp  gijoop-test-array-2.imp  gijoop-test-array-3.imp  gijoop-test-div-1.imp  gijoop-test-div-10.imp  gijoop-test-div-2.imp  gijoop-test-div-3.imp  gijoop-test-div-4.imp  (+51 more)
(+145 files in other folders)
